--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,36 @@
 }
 
 .likedin_v1 svg {
-    width: 100px;
-    height: 100px;
-    transition: all .5s ease;
+    width: 100px !important;
+    height: 100px !important;
     opacity: 0;
 }
 
 .likedin__liked svg {
     opacity: 1;
-    filter: drop-shadow(0 0 20px rgb(0, 0, 0, 0.5));
+    animation: icon_animated 1.5s 2 alternate ease-in-out;
+}
+
+@keyframes icon_animated {
+    0% {
+        transform: scale(0);
+    }
+
+    25% {
+        transform: scale(1.2);
+    }
+
+    50% {
+        transform: scale(0.8);
+    }
+
+    75% {
+        transform: scale(1)
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .likedin_v1 svg>* {
