--- a/styles.css
+++ b/styles.css
@@ -18,29 +18,34 @@
 }
 
 .likedin__liked svg {
-    opacity: 1;
+    opacity: 0;
     animation: icon_animated 1.5s 2 alternate ease-in-out;
 }
 
 @keyframes icon_animated {
     0% {
         transform: scale(0);
+        opacity: 1;
     }
 
     25% {
         transform: scale(1.2);
+        opacity: 1;
     }
 
     50% {
         transform: scale(0.8);
+        opacity: 1;
     }
 
     75% {
-        transform: scale(1)
+        transform: scale(1);
+        opacity: 1;
     }
 
     100% {
         transform: scale(1);
+        opacity: 1;
     }
 }
 
