--- a/popup/popup.css
+++ b/popup/popup.css
@@ -7,11 +7,25 @@
 
 body {
     font-size: 16px;
-    height: 300px;
+    height: 340px;
     width: 200px;
     background-color: #1f2429;
     color: #FFF;
     padding: 20px;
+}
+
+.hidden {
+    display: none !important;
+}
+
+.not-working {
+    background-color: #1f2429;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    width: 100%;
+    height: calc(100% - 100px);
+    opacity: .8;
 }
 
 .logo_container {
@@ -183,6 +197,38 @@ body {
 .reaction_option likedin_react img {
     width: 100%;
     height: 100%;
+}
+
+.toggle-theme_container {
+    width: 100%;
+    cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 14px;
+}
+
+.toggle-theme_container p {}
+
+.toggle-theme_container span {
+    width: 30px;
+    height: 30px;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: all .3s ease;
+}
+
+.toggle-theme_container span:hover {
+    background-color: #3d454d;
+}
+
+.toggle-theme_container span svg {
+    width: 20px;
+    height: 20px;
+    color: #FFF;
 }
 
 footer {
